--- a/nuevaReceta.html
+++ b/nuevaReceta.html
@@ -17,7 +17,6 @@
 		</div>
 </header>
 
-
 <div id="gran_contenedor">
 <form method="POST" id="Formulario" action="subirReceta.php" enctype="multipart/form-data">
 
@@ -30,8 +29,11 @@
 			<textarea type="text" id="desc" name="desc" class="input" placeholder="Descripcion" rows="2" maxlength="128" required=""></textarea>
 		</div>
 		<div class="Ingreso">
-			<input type="text" id="dura" name="dura" size="16" class="input2" placeholder="Duracion" required="">
+			<input type="text" id="dura" name="dura" size="48" class="input" placeholder="Duracion" required="">
 		</div>
+        <div class="Ingreso">
+            <input type="text" id="link" name="link" size="" class="input2" placeholder="Link de Youtube (opcional)">
+        </div>
 		<div class="Ingreso" id="ingrClase">
 			<input type="button" value="+" id="bIngr" onclick="sumar('ingr','Ingrediente')" class="Mas" >
 			<input type="button" value="-" onclick="borrar('ingr')" class="Mas" ><br/>
@@ -50,68 +52,47 @@
 </div>
 <script type="text/javascript">
 
-    do{
-        var num1 = parseInt(prompt("numero 1"), 10);
-        var num2 = parseInt(prompt("numero 2"), 10);
-        let operacion = prompt("operacion");
-
-        operatoria = {
-            sumar: function(){
-                resultado = num1 + num2;
-                alert(resultado);
-            }
-        }
-        operatoria["sumar()"];
-
-
-    } while(con = prompt("desea continuar? (s o n)") == "s")
+    const listar = id => {
+        let lista = document.getElementById(id + "Clase");
+        let i = lista.getElementsByTagName('input').length;
+        return i;
+    }
 
 	function sumar(id, tipo){
-        var lista = document.getElementById(id + "Clase");
-        i = lista.getElementsByTagName('input').length;
+        let lista = document.getElementById(id + "Clase");
+        let i = lista.getElementsByTagName('input').length;
         lista.insertAdjacentHTML("beforeend",'<input type="text" id="'+ id + (i - 2) +'" name="'+ id + (i - 2) +'" size="640" class="input2" placeholder="'+ tipo + ' ' + (i - 1) +'" required="">');
     }
 
     function borrar(id){
-        var lista = document.getElementById(id + "Clase");
-        i = lista.getElementsByTagName('input').length;
-        if(i > 3){
-        input = document.getElementById(id + (i - 3));
-        padre = input.parentNode;
+        let i = listar(id);
+        if (i > 3){
+        let input = document.getElementById(id + (i - 3));
+        let padre = input.parentNode;
         padre.removeChild(input);
     	}
-    	else{
-    		input = document.getElementById(id + "0");
-    		input.value = null;
-    	}
+    	else document.getElementById(id + "0").value = null;
     }
 
     function subir(){
     	tipo = ["ingr","proc"]
-    	for (var n = 0; n <= 1; n++){
-    		var lista = document.getElementById(tipo[n] + "Clase");
-        		largo = lista.getElementsByTagName('input').length;
-        		ingrediente = document.getElementById(tipo[n] + "0").value;
-    		for (var i = 1; i <= (largo - 3); i++) {
+    	for (let n = 0; n <= 1; n++){
+    		let largo = listar(tipo[n]);
+        	ingrediente = document.getElementById(tipo[n] + "0").value;
+    		for (let i = 1; i <= (largo - 3); i++) {
     			if(document.getElementById(tipo[n] + i).value != ""){
-    			ingrediente = ingrediente + "_-_" + document.getElementById(tipo[n] + i).value;
+    			ingrediente += "_-_" + document.getElementById(tipo[n] + i).value;
     			}
     		}
-    		for (var i = 1; i <= (largo - 3); i++) {
-    			input = document.getElementById(tipo[n] + i);
-        		padre = input.parentNode;
+    		for (let i = 1; i <= (largo - 3); i++) {
+    			let input = document.getElementById(tipo[n] + i);
+        		let padre = input.parentNode;
         		padre.removeChild(input);
     		}
     		document.getElementById(tipo[n] + "0").value = ingrediente;
     	}
-    	
-    	
     	document.forms["Formulario"].submit()
-    	for (var i = 0; i <= 1; i++){
-    		document.getElementById(tipo[i] + "0").value = null;
-    	}
 	}
-
 </script>
 </body>	
 </html>
